# winrsutil

./: Cargo.toml  LICENSE  README.md
common/: Cargo.toml
common/src/: lib.rs
sample/cpptest/: cpptest.cpp  cpptest.h  cpptest.sln  cpptest.vcxproj  cpptest.vcxproj.filters
src/: lib.rs
src/defer/: mod.rs
src/error/: mod.rs
src/icon/: mod.rs
src/process/: mod.rs  module.rs
src/registry/: mod.rs
src/sign/: mod.rs
src/version/: mod.rs
src/wmi/: mod.rs
