[package]
name = "winrsutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.windows]
version = "0.51.0"
features = [
    "Win32_System_WindowsProgramming",
    "Win32_Foundation",
    "Win32_NetworkManagement_NetManagement",
    "Win32_System_Registry",
    "Win32_Security_WinTrust",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Wmi",
    "Win32_System_Rpc",
    "Win32_System_Variant",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Wdk_System_Threading",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation"
]

[lib]
name = "winrsutil"
crate-type = ["cdylib"]
